# iftlg

./: CMakeLists.txt  LICENSE  Makefile  README.md  README.rst  dllres.rc.cmakein  extractor.cpp  extractor.h  iftlg.rc  spi00in.c  spi00in.h
.github/workflows/: ci.yml
